--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,13 +4,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   molten_navigationbar_flutter:
-    path: ../../molten_navigationbar_flutter
+    path: ../
 
 
 
